@@ -1,5 +1,7 @@
  * Support averages
  * Support scaling for split boards
- * gsalliere
  * check movements
  * support adjusted scores
+ * gsalliere
+   - exporting
+   - viewing/editing boards
